--- a/angular.json
+++ b/angular.json
@@ -23,6 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "externalDependencies": [""],
             "outputPath": "dist/teste",
             "index": "src/index.html",
             "browser": "src/main.ts",
